# sonorust

./: Cargo.toml  LICENSE  flake.nix  rust-toolchain.toml
apps/debugger-react/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
apps/debugger-react/src/: App.tsx  index.css  main.tsx
apps/debugger-react/src/components/: BottomPanel.tsx  CompileDialogModal.tsx  CompileForm.tsx  Debugger.tsx  DebuggerToolbar.tsx  DisassemblyPanel.tsx  ExecutionControls.tsx  GraphDisassembly.tsx  InstructionLine.tsx  LinearDisassembly.tsx  LogsTab.tsx  MemoryTabs.tsx  StackPanel.tsx  StatusBar.tsx  ToolbarButton.tsx  VMProvider.tsx
apps/debugger-react/src/hooks/: useBreakpointHitLog.ts  useToggleBreakpoint.ts  useVmBatchRunner.ts
apps/debugger-react/src/lib/: resize.ts  tailwind.ts  utils.ts  wasmLoader.ts
apps/debugger-react/src/stores/: debuggerStore.ts  logStore.ts  playerStore.ts  vmStore.ts
crates/bytecode/: Cargo.toml
crates/bytecode/src/: compiler.rs  instruction.rs  ir_builder.rs  ir_parser.rs  lib.rs  main.rs  vm.rs
crates/bytecode/src/compiler/: audio.rs  compilable.rs  control_flow.rs  debug.rs  logical.rs  math.rs  memory.rs  side_effects.rs  timing.rs
crates/bytecode/src/vm/: control_flow.rs  debug.rs  logical.rs  math.rs  memory.rs  side_effects.rs  timing.rs
crates/cranelift/src/: lib.rs
crates/cranelift/src/codegen/: control_flow.rs  logical.rs  math.rs  memory.rs  mod.rs
crates/debugger-wasm/: Cargo.toml
crates/debugger-wasm/src/: lib.rs  logging.rs
crates/interpreter/src/: lib.rs  node.rs  op_code.rs
crates/interpreter/src/op_code/: control_flow.rs  logical.rs  math.rs  memory.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs  nodes.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  memory_access.rs
crates/models/: Cargo.toml
crates/models/src/: blocks.rs  engine.rs  ids.rs  level.rs  lib.rs  serde.rs
crates/models/src/blocks/: common.rs  play.rs
crates/models/src/blocks/play/: archetype.rs  engine_rom.rs  entity.rs  level.rs  runtime.rs
crates/models/src/blocks/play/archetype/: life.rs  score.rs
crates/models/src/blocks/play/entity/: data.rs  despawn.rs  info.rs  input.rs  life.rs  memory.rs  score.rs  shared_memory.rs
crates/models/src/blocks/play/level/: bucket.rs  data.rs  life.rs  memory.rs  option.rs  score.rs
crates/models/src/blocks/play/runtime/: background.rs  environment.rs  particle_transform.rs  skin_transform.rs  touch_array.rs  ui.rs  ui_configuration.rs  update.rs
crates/models/src/engine/: common.rs  configuration.rs  play.rs
crates/models/src/engine/common/archetype/: callbacks.rs
crates/models/src/engine/configuration/: option.rs  ui.rs
crates/models/src/engine/play/: archetype.rs  data.rs
crates/models/src/engine/play/archetype/: callbacks.rs  data.rs
crates/models/src/level/: data.rs  info.rs
crates/models/src/skin/: data.rs
crates/resources/: Cargo.toml
crates/resources/src/: browser.rs  client.rs  error.rs  extension.rs  http.rs  lib.rs  provider.rs  types.rs  zip.rs
crates/rest/: Cargo.toml
crates/rest/src/: client.rs  error.rs  extension.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: access.rs  context.rs  lib.rs  side_effects.rs
crates/runtime/src/memory/: play.rs
crates/runtime/src/testing/: mod.rs
crates/sonorust-cranelift/: Cargo.toml
crates/sonorust-cranelift/src/: lib.rs
crates/sonorust-cranelift/src/codegen/: control_flow.rs  jit.rs  logical.rs  math.rs  memory.rs  mod.rs
crates/sonorust-interpreter/: Cargo.toml
crates/sonorust-interpreter/src/: lib.rs  node.rs  op_code.rs
crates/sonorust-interpreter/src/op_code/: math.rs  memory.rs
crates/sonorust-ir/src/: lib.rs  nodes.rs
crates/sonorust-runtime/: Cargo.toml
crates/sonorust-runtime/src/: context.rs  lib.rs
crates/sonorust-runtime/src/basic/: mod.rs
crates/sonorust-tests/: Cargo.toml
crates/sonorust-tests/src/: lib.rs
crates/sonorust-tests/tests/: control_flow.rs  logical.rs  math.rs  memory.rs
crates/tests/src/: lib.rs
crates/tests/tests/: control_flow.rs  logical.rs  math.rs  memory.rs
src/: lib.rs  nodes.rs
src/codegen/: control_flow.rs  jit.rs  logical.rs  math.rs  memory.rs  mod.rs
src/runtime/: context.rs  mod.rs
src/runtime/basic/: mod.rs
