[workspace]
resolver = "2"
members = ["crates/cranelift", "crates/interpreter", "crates/ir", "crates/macros", "crates/models", "crates/rest", "crates/runtime", "crates/tests"]

[workspace.dependencies]
sonorust-ir = { path = "./crates/ir" }
sonorust-interpreter = { path = "./crates/interpreter" }
sonorust-cranelift = { path = "./crates/cranelift" }
sonorust-models = { path = "./crates/models" }
sonorust-runtime = { path = "./crates/runtime" }
sonorust-tests = { path = "./crates/tests" }

glam = { version = "0.33" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
