[package]
name = "sonorust-bytecode"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8"
sonorust-ir = { workspace = true }
sonorust-runtime = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "sonorust-ir/serde"]
wasm = ["dep:tsify", "dep:wasm-bindgen", "sonorust-ir/wasm"]
