[package]
name = "sonorust-debugger-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.3", features = ["wasm_js"] }
glam = { workspace = true }
js-sys = "*"
serde = { workspace = true }
tracing = { workspace = true }
tsify = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-tracing = "2.1.0"

sonorust-bytecode = { workspace = true, features = ["serde", "wasm"] }
sonorust-models = { workspace = true, features = ["serde", "wasm"] }
sonorust-ir = { workspace = true, features = ["serde", "wasm"] }
sonorust-resources = { workspace = true, default-features = false, features = ["zip"] }
sonorust-runtime = { workspace = true, features = ["serde", "wasm"] }
once_cell = "1.21.4"
tracing-subscriber = "0.3.23"
wasm-bindgen-futures = "0.4.76"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory-opt", "-O"]
