[package]
name = "sonorust-ir"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen", "dep:tsify"]
