[package]
name = "sonorust-resources"
version = "0.1.0"
edition = "2024"

[dependencies]
sonorust-models.workspace = true

flate2 = "1.1.1"
reqwest = { version = "0.12.15", optional = true }
serde_json.workspace = true
thiserror = "2.0.12"
url = { version = "2.5.4", optional = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate"], optional = true }

[features]
default = ["http", "zip"]
http = ["dep:reqwest", "dep:url"]
zip = ["dep:zip"]
