[package]
name = "sonorust-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
sonorust-ir = { workspace = true }
sonorust-macros = { path = "../macros" }
sonorust-models = { workspace = true }

rand = "0.9"
getrandom = { version = "0.3" }
tracing = { workspace = true }

[features]
default = []
serde = ["sonorust-ir/serde", "sonorust-models/serde"]
wasm = ["sonorust-ir/wasm", "sonorust-models/wasm", "getrandom/wasm_js"]
